spacing fixes

--- a/style.css
+++ b/style.css
@@ -406,6 +406,11 @@ cursor: pointer;
     line-height: 1.6;
   }
 
+  .about-text
+  {
+    font-size: 1.2rem;
+  }
+
 
   .yellow-button {
     padding: 15px 25px;
